[package]
name = "agsol-token-metadata"
version = "0.0.0-alpha"
description = "Agora's fork of Metaplex Metadata"
authors = ["Agora DAO <mark@gold.xyz"]
repository = "https://github.com/zgendao/metaplex"
license = "MIT"
edition = "2021"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
arrayref = "0.3.6"
num-traits = "0.2"
solana-program = "1.9.0"
metaplex-token-vault = { path = "../../token-vault/program", features = [ "no-entrypoint" ], version = "0.0.0-alpha" }
spl-token = { version = "3.3.0", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.9.1"

[dev-dependencies]
solana-sdk = "1.9.0"
solana-program-test = "1.9.0"

[lib]
crate-type = ["cdylib", "lib"]
