[package]
name = "metaplex-token-vault"
version = "0.0.1"
description = "Metaplex Token Vault"
authors = ["Metaplex Maintainers <maintainers@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/metaplex"
license = "Apache-2.0"
edition = "2018"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
#solana-program = { git = "https://github.com/zgendao/solana.git", tag = "v1.9.0-zgen" }
solana-program = "1.9.0"
spl-token = { git = "https://github.com/zgendao/solana-program-library.git", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
