[package]
name = "agsol-token-vault"
version = "0.0.0-alpha"
description = "Agora's fork of Metaplex Token Vault"
authors = ["Agora DAO <mark@gold.xyz>"]
repository = "https://github.com/zgendao/metaplex"
license = "MIT"
edition = "2021"
exclude = ["js/**"]

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.9.0"
spl-token = { version = "3.3.0", features = [ "no-entrypoint" ] }
thiserror = "1.0"
borsh = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]
